@@ -438,6 +438,9 @@ specifier|static
 name|ConfigSolr
 name|fromString
 parameter_list|(
+name|SolrResourceLoader
+name|loader
+parameter_list|,
 name|String
 name|xml
 parameter_list|)
@@ -445,7 +448,7 @@ block|{
 return|return
 name|fromInputStream
 argument_list|(
-literal|null
+name|loader
 argument_list|,
 operator|new
 name|ByteArrayInputStream
@@ -657,6 +660,30 @@ name|CoresLocator
 name|getCoresLocator
 parameter_list|()
 function_decl|;
+comment|/**    * The directory against which relative core instance dirs are resolved.  If none is    * specified in the config, uses solr home.    *    * @return core root directory    */
+DECL|method|getCoreRootDirectory
+specifier|public
+name|String
+name|getCoreRootDirectory
+parameter_list|()
+block|{
+return|return
+name|get
+argument_list|(
+name|CfgProp
+operator|.
+name|SOLR_COREROOTDIRECTORY
+argument_list|,
+name|config
+operator|.
+name|getResourceLoader
+argument_list|()
+operator|.
+name|getInstanceDir
+argument_list|()
+argument_list|)
+return|;
+block|}
 DECL|method|getShardHandlerFactoryPluginInfo
 specifier|public
 name|PluginInfo
