@@ -133,46 +133,13 @@ operator|.
 name|substituteProperties
 argument_list|()
 expr_stmt|;
-name|log
-operator|.
-name|info
-argument_list|(
-literal|"Config-defined core root directory: {}"
-argument_list|,
-name|get
-argument_list|(
-name|CfgProp
-operator|.
-name|SOLR_COREROOTDIRECTORY
-argument_list|,
-literal|""
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|String
-name|coreRoot
-init|=
-name|get
-argument_list|(
-name|CfgProp
-operator|.
-name|SOLR_COREROOTDIRECTORY
-argument_list|,
-name|config
-operator|.
-name|getResourceLoader
-argument_list|()
-operator|.
-name|getInstanceDir
-argument_list|()
-argument_list|)
-decl_stmt|;
 name|coresLocator
 operator|=
 operator|new
 name|CorePropertiesLocator
 argument_list|(
-name|coreRoot
+name|getCoreRootDirectory
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
