@@ -1762,16 +1762,6 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-name|ConfigSolr
-name|config
-init|=
-name|ConfigSolr
-operator|.
-name|fromString
-argument_list|(
-name|CUSTOM_HANDLERS_SOLR_XML
-argument_list|)
-decl_stmt|;
 name|SolrResourceLoader
 name|loader
 init|=
@@ -1779,6 +1769,18 @@ operator|new
 name|SolrResourceLoader
 argument_list|(
 literal|"solr/collection1"
+argument_list|)
+decl_stmt|;
+name|ConfigSolr
+name|config
+init|=
+name|ConfigSolr
+operator|.
+name|fromString
+argument_list|(
+name|loader
+argument_list|,
+name|CUSTOM_HANDLERS_SOLR_XML
 argument_list|)
 decl_stmt|;
 name|CoreContainer
